framework/contracts/account/manager/tests/snapshots/subaccount__proxy_updating_on_subaccount_should_succeed.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: all_storage
---
"abstract:account-factory":
  - - acseq
    - "3"
  - - cfg
    - "{\"version_control_contract\":\"contract1\",\"ans_host_contract\":\"contract0\",\"module_factory_address\":\"contract2\",\"ibc_host\":\"contract5\"}"
  - - contract_info
    - "{\"contract\":\"abstract:account-factory\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ans-host":
  - - config
    - "{\"next_unique_pool_id\":1}"
  - - contract_info
    - "{\"contract\":\"abstract:ans-host\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
  - - registered_dexes
    - "[]"
"abstract:ibc-client":
  - - config
    - "{\"version_control\":{\"address\":\"contract1\"},\"ans_host\":{\"address\":\"contract0\"}}"
  - - contract_info
    - "{\"contract\":\"abstract:ibc-client\",\"version\":\"0.20.0\"}"
  - - module_data
    - "{\"module\":\"abstract:ibc-client\",\"version\":\"0.20.0\",\"dependencies\":[],\"metadata\":null}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-host":
  - - cfg
    - "{\"ans_host\":{\"address\":\"contract0\"},\"account_factory\":\"contract3\",\"version_control\":{\"address\":\"contract1\"}}"
  - - contract_info
    - "{\"contract\":\"abstract:ibc-host\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:manager-local-0":
  - - "\u0000\u0007modulesabstract:proxy"
    - "\"v\\u0005 W$ÛÒyø<\\\\wÃ\\u0001\\u001Bµg)[3>)¼â\\u001A\\u0002&·ù\\\"m\""
  - - "\u0000{12}is_suspended"
    - "false"
  - - "\u0000{4}info"
    - "{\"name\":\"Default Abstract Account\",\"governance_details\":{\"Monarchy\":{\"monarch\":\"owner\"}},\"chain_id\":\"cosmos-testnet-14002\",\"description\":null,\"link\":null}"
  - - "\u0000{6}config"
    - "{\"version_control_address\":\"contract1\",\"module_factory_address\":\"contract2\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":0}"
  - - context
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:manager\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:manager-local-1":
  - - "\u0000\u0007modulesabstract:proxy"
    - "\"ØJ\\\\Ì1¬´B´ÛWn\\\"\\u001B\\u0012`±¿9½\\u0005\\u0002Íºñù¬\""
  - - "\u0000\bsub_accs\u0000\u0000\u0000\u0002"
    - "{}"
  - - "\u0000{12}is_suspended"
    - "false"
  - - "\u0000{4}info"
    - "{\"name\":\"Default Abstract Account\",\"governance_details\":{\"Monarchy\":{\"monarch\":\"owner\"}},\"chain_id\":\"cosmos-testnet-14002\",\"description\":null,\"link\":null}"
  - - "\u0000{6}config"
    - "{\"version_control_address\":\"contract1\",\"module_factory_address\":\"contract2\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":1}"
  - - context
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:manager\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:manager-local-2":
  - - "\u0000\u0007modulesabstract:proxy"
    - "\", ù\\u0000¾w¢»{\\n¿O¶wÄü8c\\u0003CÚ¼\\u000F´KêE\\u001D\""
  - - "\u0000{12}is_suspended"
    - "false"
  - - "\u0000{4}info"
    - "{\"name\":\"My subaccount\",\"governance_details\":{\"SubAccount\":{\"manager\":\"úÃº\\u000F¡f9Ê\\u000E/´K}\\u001D)¨\\u00167ÐvNÚ¡ëã}|d\",\"proxy\":\"ØJ\\\\Ì1¬´B´ÛWn\\\"\\u001B\\u0012`±¿9½\\u0005\\u0002Íºñù¬\"}},\"chain_id\":\"cosmos-testnet-14002\",\"description\":\"new desc\",\"link\":null}"
  - - "\u0000{6}config"
    - "{\"version_control_address\":\"contract1\",\"module_factory_address\":\"contract2\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":2}"
  - - context
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:manager\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"ØJ\\\\Ì1¬´B´ÛWn\\\"\\u001B\\u0012`±¿9½\\u0005\\u0002Íºñù¬\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:module-factory":
  - - "\u0000{5}config"
    - "{\"version_control_address\":\"contract1\",\"ans_host_address\":\"contract0\"}"
  - - contract_info
    - "{\"contract\":\"abstract:module-factory\",\"version\":\"0.20.0\"}"
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:proxy-local-0":
  - - "\u0000{5}state"
    - "{\"modules\":[\"D?Ê\\u0014¬å[#^,¡4\\r\\u000E\\r¡éÓ¯:5Z\\u000EÑüF%¾á\\b\"]}"
  - - "\u0000{6}ans_host"
    - "{\"address\":\"contract0\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":0}"
  - - admin
    - "\"D?Ê\\u0014¬å[#^,¡4\\r\\u000E\\r¡éÓ¯:5Z\\u000EÑüF%¾á\\b\""
  - - contract_info
    - "{\"contract\":\"abstract:proxy\",\"version\":\"0.20.0\"}"
"abstract:proxy-local-1":
  - - "\u0000{5}state"
    - "{\"modules\":[\"úÃº\\u000F¡f9Ê\\u000E/´K}\\u001D)¨\\u00167ÐvNÚ¡ëã}|d\"]}"
  - - "\u0000{6}ans_host"
    - "{\"address\":\"contract0\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":1}"
  - - admin
    - "\"úÃº\\u000F¡f9Ê\\u000E/´K}\\u001D)¨\\u00167ÐvNÚ¡ëã}|d\""
  - - contract_info
    - "{\"contract\":\"abstract:proxy\",\"version\":\"0.20.0\"}"
"abstract:proxy-local-2":
  - - "\u0000{5}state"
    - "{\"modules\":[\"\\u0010Õ&A?ÆÇðæ)áàpä:^cÒùhÚ±}³¼¶ê@K\\u0003\"]}"
  - - "\u0000{6}ans_host"
    - "{\"address\":\"contract0\"}"
  - - acc_id
    - "{\"trace\":\"local\",\"seq\":2}"
  - - admin
    - "\"\\u0010Õ&A?ÆÇðæ)áàpä:^cÒùhÚ±}³¼¶ê@K\\u0003\""
  - - contract_info
    - "{\"contract\":\"abstract:proxy\",\"version\":\"0.20.0\"}"
"abstract:version-control":
  - - "\u0000\u0003lib\u0000\babstract\u0000\u0005proxy0.20.0"
    - "{\"account_base\":6}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\u0007manager0.20.0"
    - "{\"account_base\":5}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\bans-host0.20.0"
    - "{\"native\":\"contract0\"}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\nibc-client0.20.0"
    - "{\"native\":\"contract4\"}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\u000emodule-factory0.20.0"
    - "{\"native\":\"contract2\"}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\u000faccount-factory0.20.0"
    - "{\"native\":\"contract3\"}"
  - - "\u0000\u0003lib\u0000\babstract\u0000\u000fversion-control0.20.0"
    - "{\"native\":\"contract1\"}"
  - - "\u0000\u0004accs\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "{\"manager\":\"D?Ê\\u0014¬å[#^,¡4\\r\\u000E\\r¡éÓ¯:5Z\\u000EÑüF%¾á\\b\",\"proxy\":\"v\\u0005 W$ÛÒyø<\\\\wÃ\\u0001\\u001Bµg)[3>)¼â\\u001A\\u0002&·ù\\\"m\"}"
  - - "\u0000\u0004accs\u0000\u0005local\u0000\u0000\u0000\u0001"
    - "{\"manager\":\"úÃº\\u000F¡f9Ê\\u000E/´K}\\u001D)¨\\u00167ÐvNÚ¡ëã}|d\",\"proxy\":\"ØJ\\\\Ì1¬´B´ÛWn\\\"\\u001B\\u0012`±¿9½\\u0005\\u0002Íºñù¬\"}"
  - - "\u0000\u0004accs\u0000\u0005local\u0000\u0000\u0000\u0002"
    - "{\"manager\":\"\\u0010Õ&A?ÆÇðæ)áàpä:^cÒùhÚ±}³¼¶ê@K\\u0003\",\"proxy\":\", ù\\u0000¾w¢»{\\n¿O¶wÄü8c\\u0003CÚ¼\\u000F´KêE\\u001D\"}"
  - - "\u0000\u0005nmspcabstract"
    - "{\"trace\":\"local\",\"seq\":0}"
  - - "\u0000\u0007nmspc_a\u0000\u0005local\u0000\u0004\u0000\u0000\u0000\u0000abstract"
    - "8"
  - - cfg
    - "{\"allow_direct_module_registration_and_updates\":true,\"namespace_registration_fee\":{\"denom\":\"none\",\"amount\":\"0\"}}"
  - - contract_info
    - "{\"contract\":\"abstract:version-control\",\"version\":\"0.20.0\"}"
  - - fac
    - "\"contract3\""
  - - ownership
    - "{\"owner\":\"owner\",\"pending_owner\":null,\"pending_expiry\":null}"

